// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaggerAvatar - Snapshots > matches snapshot (index 0) 1`] = `
<div
  data-testid="user-info-popover"
>
  <button
    class="cursor-pointer rounded-full transition-opacity hover:opacity-80 ml-0 z-[4]"
    data-slot="button"
  >
    <div
      data-testid="avatar-Alice"
    >
      Avatar
    </div>
  </button>
</div>
`;

exports[`TaggerAvatar - Snapshots > matches snapshot (index 1) 1`] = `
<div
  data-testid="user-info-popover"
>
  <button
    class="cursor-pointer rounded-full transition-opacity hover:opacity-80 -ml-2 z-[3]"
    data-slot="button"
  >
    <div
      data-testid="avatar-Alice"
    >
      Avatar
    </div>
  </button>
</div>
`;
